--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,10 @@
         <version>1.18.30</version>
         <scope>provided</scope>
       </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-openapi</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
